--- a/MAD157Module5MySecondAppKarenM/Base.lproj/Main.storyboard
+++ b/MAD157Module5MySecondAppKarenM/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9yE-ng-4fa">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -32,7 +32,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-486.95652173913049" y="127.90178571428571"/>
+            <point key="canvasLocation" x="423.1884057971015" y="127.90178571428571"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="yrL-lb-l6P">
@@ -48,7 +48,7 @@
                                 <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button2"/>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="xS2-Nj-m8T"/>
+                                    <segue destination="Yz8-8D-OaD" kind="show" id="PQv-xC-Cba"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -59,7 +59,55 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rLr-r2-ibS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="478" y="128"/>
+            <point key="canvasLocation" x="1386.9565217391305" y="127.90178571428571"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="f7b-Dx-jyn">
+            <objects>
+                <viewController id="Yz8-8D-OaD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0xC-g5-opY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GZX-WP-5Lk">
+                                <rect key="frame" x="120" y="373" width="174" height="71"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button3"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="Yb3-w0-WQY"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="JHb-io-ix9"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="rC2-JH-pEz"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZFO-HF-98h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2321.739130434783" y="127.90178571428571"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YkW-ef-icg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9yE-ng-4fa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="F7H-tL-glH">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Il9-6a-hb2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EBy-6u-CGX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-486.95652173913049" y="127.90178571428571"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Yb3-w0-WQY"/>
+    </inferredMetricsTieBreakers>
 </document>
